# cpsat-rs

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
examples/: jobshop.rs  nqueens.rs
shim/: solve_shim.cc  solve_shim.h
src/: error.rs  expressions.rs  ffi.rs  lib.rs  model.rs  params.rs  proto.rs  solver.rs  vars.rs
tests/: jsp_benchmarks.rs  proptest_roundtrip.rs  scheduling.rs  smoke.rs  solution_validation.rs
